Board Taskcard decripten overflow fixed.

--- a/styles/board.css
+++ b/styles/board.css
@@ -436,7 +436,7 @@
 }
 
 .taskHeadlineContent {
-    width: 137px;
+    width: 100%;
     height: 19px;
     font-family: 'Inter';
     font-style: normal;
@@ -447,6 +447,7 @@
     flex: none;
     order: 0;
     flex-grow: 0;
+    overflow: hidden;
 }
 
 .taskContent {
@@ -461,6 +462,7 @@
     flex: none;
     order: 1;
     flex-grow: 0;
+    overflow: hidden;
 }
 
 .doneBar {
